finished with project

--- a/Project/Code/Medicheckv2/Medicheckv2/static/css/style.css
+++ b/Project/Code/Medicheckv2/Medicheckv2/static/css/style.css
@@ -1,14 +1,13 @@
-*{
-    color: #304;
-}
-
 body{
     /* background-image: url(../image/background1.png); */
     background-image: repeating-linear-gradient(90deg, rgb(95, 152, 225) 0px, rgb(95, 152, 225) 10px,rgb(115, 164, 229) 10px, rgb(115, 164, 229) 20px,rgb(135, 175, 233) 20px, rgb(135, 175, 233) 30px,rgb(214, 222, 250) 30px, rgb(214, 222, 250) 40px,rgb(174, 199, 242) 40px, rgb(174, 199, 242) 50px,rgb(155, 187, 238) 50px, rgb(155, 187, 238) 60px,rgb(194, 210, 246) 60px, rgb(194, 210, 246) 70px);
 }
+.container{
+    min-height: 550px;
+}
 nav ul{
     list-style: none;
-    background: #000;
+    background: whitesmoke;
     padding: 10px;
     overflow: hidden;
 }
@@ -20,14 +19,14 @@ nav ul li{
 }
 
 nav ul li a{
-    color: #fff;
+    color: #000;
     text-align: center;
     text-decoration: none;
 }
 
 nav ul li a:hover{
-    color : #000;
-    background-color: #fff;
+    color : #fff;
+    background-color: #000;
     padding: 10px;
     text-decoration: none;
 }
