--- a/Project/Code/Medicheckv2/Medicheckv2/templates/login.html
+++ b/Project/Code/Medicheckv2/Medicheckv2/templates/login.html
@@ -3,7 +3,9 @@
 <div class="container">
     <div class="formContainer">
     <form action="/users/authenticate_user" method="POST">
-        <h1>Login Here</h1>
+        <div class="wrapper">
+            <h1>Login Here</h1>
+        </div>
         {% csrf_token %}
         <div class="form-group">
             <label class="col-sm-2 col-form-label" for="{{ form.username.id_for_label }}">{{form.username.label_tag}}</label>{{form.username}}<span>{{form.username.error}}</span>
